# local-LLM-with-RAG

./: .dockerignore  .gitignore  Dockerfile  Documentation.md  JinaAIEmbeddings.py  LICENSE  README-docker.md  README_DOCKER.md  READMEmain.md  app.py  backup3.sql  backup4.sql  backup_file.sql  backup_file2.sql  content_routes.py  database.py  docker-compose.yml  document_loader.py  documentation.html  get_ip.bat  llm.py  llm_routes.py  main_page.py  migrate_quiz_tables.py  models.py  models_db.py  nginx.conf  parser.py  pyproject.toml  quiz.py  readme.md  requirements.txt  start.py  start.sh  stop.sh  test_quiz.py  ui.py  ui_User.py  ui_client.py  Структура.md
.streamlit/: config.toml
Research/: test2.md
app/core/: database.py
backend/: alembic.ini  requirements.txt
backup/: backup_file.sql
core/: __init__.py  agent.py  document_loader.py  models.py
documents/: test.txt
frontend/: README.md  package-lock.json  package.json
interfaces/: __init__.py  streamlit_app.py
pages/: admin.py  generate.py  ui_client.py  user_guide.py
routes/: content_routes.py  user_routes.py
server/: .gitignore  Dockerfile  LICENSE  READMEmain.md  app.py  database.py  document_loader.py  init_db.py  llm.py  llm_state_manager.py  models_db.py  pyproject.toml  quiz.py  requirements.txt  worker.py
server/5/: chroma.sqlite3
server/migrations/: migrate_feedback_table.py  migrate_files_to_volume.py
server/routes/: content_routes.py  directory_routes.py  feedback_routes.py  llm_routes.py  user_routes.py
server/test/: load_test_chat.py
server/utils/: rabbitmq_service.py
(+114 files in other folders)
