[project]
name = "local-llm-with-rag"
version = "0.1.0"
description = "An application exploring using local LLMs for research"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ollama>=0.6.1",
    "markitdown[all]>=0.1.0",
    "pydantic-ai>=0.1.0",
    "streamlit>=1.52.0",
    "lancedb>=0.26.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "ty>=0.0.1a6",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["core", "interfaces"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["*.py", "core/*.py", "interfaces/*.py"]
